# zenml-ml-forecast

./: .gitignore  DEPLOYMENT.md  Makefile  README.md  main.py  pyproject.toml  service.py
.github/workflows/: cd.yaml  ci.yaml
notebooks/: debug.ipynb
src/zenml_ml_forecast/: inference.py  main.py  steps.py  training.py
src/zenml_ml_forecast/configs/: inference.yaml  training.yaml
src/zenml_ml_forecast/steps/: data_processing.py  model.py
zenml_ml_forecast/: inference.py  main.py  training.py
zenml_ml_forecast/configs/: inference.yaml  training.yaml
zenml_ml_forecast/model_deployment/: service.py
zenml_ml_forecast/steps/: data_processing.py  model.py  predictor.py
