# [build-system]
# requires = ["setuptools>=61.0", "wheel"]
# build-backend = "setuptools.build_meta"

[project]
name = "zenml-ml-forecast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bentoml>=1.4.24",
    "gcsfs>=2024.12.0",
    "google-auth>=2.40.3",
    "google-cloud-storage>=3.3.1",
    "kubernetes>=21.7,<26",
    "loguru>=0.7.3",
    "mlflow>=2.1.1,<3",
    "pandas>=2.3.2",
    "pip>=25.2",
    "plotly>=6.3.0",
    "polars>=1.33.1",
    "prophet>=1.1.7",
    "pygithub>=2.8.1",
    "zenml>=0.85.0",
]

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "notebook>=7.4.5",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.0",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["zenml_ml_forecast*"]
# exclude = ["data*", "notebooks*", "tests*"]

[project.scripts]
main = "zenml_ml_forecast.main:main"
training = "zenml_ml_forecast.training:main"
inference = "zenml_ml_forecast.inference:main"


[tool.bentoml.build]
service = "service:ProphetModel"
include= [
    "service.py",
    "pyproject.toml",
    "README.md"
]
exclude = [
    "zenml_ml_forecast/",
    "data/",
    "notebooks/",
    "artifacts/",
    ".git/",
    "*.egg-info/"
]
envs = [
    { name = "MLFLOW_TRACKING_URI", value = "https://mlflow.34.40.165.212.nip.io" }
]

[tool.bentoml.build.docker]
distro = "debian"
python_version = "3.10"

[tool.bentoml.build.labels]
owner = "zenml-ml-forecast"
stage = "production"


